k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-boot-template
  labels:
    app: spring-boot-template
    environment: production
